Encapsulated the callback events

--- a/Zach/Wind Turbines/map.ipynb
+++ b/Zach/Wind Turbines/map.ipynb
@@ -21,7 +21,6 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import threading\n",
     "from shared import *\n",
     "from WeatherMap import WeatherMap"
    ]
@@ -35,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1482/1482 [00:15<00:00, 94.55it/s]\n"
+      "100%|██████████| 1482/1482 [00:14<00:00, 105.12it/s]\n"
      ]
     }
    ],
@@ -46,48 +45,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### TODO Move this into a class\n",
-    "####      Make a timer to call update_table after X ms\n",
-    "\n",
-    "# def update_table(m):\n",
-    "#     try:\n",
-    "#         m.update_table(GET_GLOBAL_SHOW_STATION())\n",
-    "#     except Exception as e:\n",
-    "#         print(e)\n",
-    "\n",
-    "# Define the callback function that will be used\n",
-    "current_time = lambda: int(round(time.time() * 1000))\n",
-    "last_time = current_time()\n",
-    "blacklist = ['mouseover', 'click', 'dblclick', 'mousedown']\n",
-    "\n",
-    "def update_info(type, event, coordinates):\n",
-    "    if type in blacklist:\n",
-    "        pass\n",
-    "    elif type == 'mousemove':\n",
-    "        global last_time, alberta\n",
-    "        \n",
-    "        # Only updates once in every 0.05 sec\n",
-    "        if current_time()-last_time > 50:\n",
-    "            alberta.station_find(coordinates)\n",
-    "            last_time = current_time()\n",
-    "\n",
-    "        \n",
-    "alberta.map.on_interaction(update_info)"
+    "#         self.events = {\n",
+    "#             'click': self.null_event,\n",
+    "#             'mouseover': self.null_event,\n",
+    "#             'dblclick': self.null_event,\n",
+    "#             'mousedown': self.null_event,\n",
+    "#             'mouseup': self.null_event,\n",
+    "#             'mousemove': self.null_event,\n",
+    "#             'interaction': self.null_event\n",
+    "#         }"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class Events():\n",
+    "#     def __init__(self, Map):\n",
+    "#         self.map = Map\n",
+    "#         self.click = self.null_event\n",
+    "#         self.mouseup = self.null_event\n",
+    "#         self.dblclick = self.null_event\n",
+    "#         self.mousemove = self.null_event\n",
+    "#         self.mouseover = self.null_event        \n",
+    "#         self.mousedown = self.null_event\n",
+    "#         self.interaction = self.null_event\n",
+    "#         self.map.on_interation(self.callback)\n",
+    "#         self._events = {\n",
+    "#             'click': self.click,\n",
+    "#             'mouseup': self.mouseup,\n",
+    "#             'dblclick': self.dbleclick,\n",
+    "#             'mousemove': self.mousemove,            \n",
+    "#             'mouseover': self.mouseover,\n",
+    "#             'mousedown': self.mousedown,            \n",
+    "#             'interaction': self.interaction\n",
+    "#         }\n",
+    "        \n",
+    "#     def callback(self, type, event, coordinates):\n",
+    "#         self._events[event](type=type, event=event, coordinates=coodinates)\n",
+    "        \n",
+    "#     def null_event(type, event, coordinates):\n",
+    "#         print('pass')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### TODO Move this into a class\n",
+    "\n",
+    "# Define the callback function that will be used\n",
+    "# current_time = lambda: int(round(time.time() * 1000))\n",
+    "# last_time = current_time()\n",
+    "# blacklist = ['mouseover', 'click', 'dblclick', 'mousedown']\n",
+    "\n",
+    "# def update_info(type, event, coordinates):\n",
+    "#     if type in blacklist:\n",
+    "#         pass\n",
+    "#     elif type == 'mousemove':\n",
+    "#         global last_time, alberta\n",
+    "        \n",
+    "#         # Only updates once in every 0.05 sec\n",
+    "#         if current_time()-last_time > 50:\n",
+    "#             alberta.station_find(coordinates)\n",
+    "#             last_time = current_time()\n",
+    "\n",
+    "# def mouse_move(type, event, coordinates):\n",
+    "#     alberta.station_find(coordinates)\n",
+    "    \n",
+    "# alberta.events['mousemove'] = mouse_move\n",
+    "#alberta.events['mousemove'](\"hello\")\n",
+    "#alberta.build('alberta_stations.txt')    \n",
+    "#alberta.map.on_interaction(update_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afc90346c5964878b036fcd92595f524",
+       "model_id": "d933d47dd93341e182f008518d4ba7ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,15 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed9bf00a9e9d48308c68639835f43613",
+       "model_id": "10281bcb206d44f59db4963d701dc425",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,6 +215,42 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mouseover\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "mouseout\n",
+      "mouseover\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "mouseout\n"
+     ]
     }
    ],
    "source": [
@@ -161,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,43 +268,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_keys(['__name__', '__doc__', '__package__', '__loader__', '__spec__', '__builtin__', '__builtins__', '_ih', '_oh', '_dh', 'In', 'Out', 'get_ipython', 'exit', 'quit', '_', '__', '___', '_i', '_ii', '_iii', '_i1', '_i2', 'time', 'threading', 'GLOBAL_SHOW_STATION', 'SET_GLOBAL_SHOW_STATION', 'GET_GLOBAL_SHOW_STATION', 'WeatherMap', '_i3', 'alberta', '_i4', 'current_time', 'last_time', 'blacklist', 'update_info', '_i5', '_5', '_i6', '_6', '_i7', '_i8'])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'coordinates' is an invalid keyword argument for this function",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-3f06d4cc2771>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoordinates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"hello\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'coordinates' is an invalid keyword argument for this function"
+     ]
     }
    ],
    "source": [
-    "globals().keys()"
+    "print(coordinates=\"hello\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'tuvalabs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-f8403f9a0fca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtuvalabs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'tuvalabs' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tuvalabs.com"
    ]
