--- a/Zach/Wind Turbines/map.ipynb
+++ b/Zach/Wind Turbines/map.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Dependencies\n",
-    "# !pip install requests --user\n",
-    "# !pip install beautifulsoup4 --user\n",
-    "# !pip install tqdm --user\n",
-    "# !pip install ipyleaflet --user\n",
-    "# !jupyter nbextension enable --py --user ipyleaflet"
+    "# Dependencies\n",
+    "!pip install requests --user\n",
+    "!pip install beautifulsoup4 --user\n",
+    "!pip install tqdm --user\n",
+    "!pip install ipyleaflet --user\n",
+    "!jupyter nbextension enable --py --user ipyleaflet"
    ]
   },
   {
@@ -34,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1482/1482 [00:13<00:00, 112.23it/s]\n"
+      "100%|██████████| 1482/1482 [00:13<00:00, 108.25it/s]\n"
      ]
     }
    ],
@@ -45,111 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#         self.events = {\n",
-    "#             'click': self.null_event,\n",
-    "#             'mouseover': self.null_event,\n",
-    "#             'dblclick': self.null_event,\n",
-    "#             'mousedown': self.null_event,\n",
-    "#             'mouseup': self.null_event,\n",
-    "#             'mousemove': self.null_event,\n",
-    "#             'interaction': self.null_event\n",
-    "#         }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class Events():\n",
-    "#     def __init__(self, Map):\n",
-    "#         self.map = Map\n",
-    "#         self.click = self.null_event\n",
-    "#         self.mouseup = self.null_event\n",
-    "#         self.dblclick = self.null_event\n",
-    "#         self.mousemove = self.null_event\n",
-    "#         self.mouseover = self.null_event        \n",
-    "#         self.mousedown = self.null_event\n",
-    "#         self.interaction = self.null_event\n",
-    "#         self.map.on_interation(self.callback)\n",
-    "#         self._events = {\n",
-    "#             'click': self.click,\n",
-    "#             'mouseup': self.mouseup,\n",
-    "#             'dblclick': self.dbleclick,\n",
-    "#             'mousemove': self.mousemove,            \n",
-    "#             'mouseover': self.mouseover,\n",
-    "#             'mousedown': self.mousedown,            \n",
-    "#             'interaction': self.interaction\n",
-    "#         }\n",
-    "        \n",
-    "#     def callback(self, type, event, coordinates):\n",
-    "#         self._events[event](type=type, event=event, coordinates=coodinates)\n",
-    "        \n",
-    "#     def null_event(type, event, coordinates):\n",
-    "#         print('pass')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### TODO Move this into a class\n",
-    "\n",
-    "# Define the callback function that will be used\n",
-    "# current_time = lambda: int(round(time.time() * 1000))\n",
-    "# last_time = current_time()\n",
-    "# blacklist = ['mouseover', 'click', 'dblclick', 'mousedown']\n",
-    "\n",
-    "# def update_info(type, event, coordinates):\n",
-    "#     if type in blacklist:\n",
-    "#         pass\n",
-    "#     elif type == 'mousemove':\n",
-    "#         global last_time, alberta\n",
-    "        \n",
-    "#         # Only updates once in every 0.05 sec\n",
-    "#         if current_time()-last_time > 50:\n",
-    "#             alberta.station_find(coordinates)\n",
-    "#             last_time = current_time()\n",
-    "\n",
-    "# def mouse_move(type, event, coordinates):\n",
-    "#     alberta.station_find(coordinates)\n",
-    "    \n",
-    "# alberta.events['mousemove'] = mouse_move\n",
-    "#alberta.events['mousemove'](\"hello\")\n",
-    "#alberta.build('alberta_stations.txt')    \n",
-    "#alberta.map.on_interaction(update_info)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3735138f44644dc4a44d52fd80c3d365",
+       "model_id": "6373402f284a4d0fa79f5ab4b8afcfc1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -190,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dbcaeaa555646c194338cb6591b7a9a",
+       "model_id": "1e861a88662e44c38e9f304e0ce7094f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,47 +121,6 @@
    ],
    "source": [
     "alberta.map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alberta.comm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'coordinates' is an invalid keyword argument for this function",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-3f06d4cc2771>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoordinates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"hello\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'coordinates' is an invalid keyword argument for this function"
-     ]
-    }
-   ],
-   "source": [
-    "print(coordinates=\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tuvalabs.com"
    ]
   }
  ],
