--- a/Zach/Wind Turbines/testing.ipynb
+++ b/Zach/Wind Turbines/testing.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,13 +406,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b74016d72a07424ebd1d976c1a7d5a6a",
+       "model_id": "5a848f251f5048a1ba19653214532bec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,7 +432,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "Label(value='$\\x08egin{align}$')"
+       "Label(value='hello')"
       ]
      },
      "metadata": {},
@@ -440,52 +440,22 @@
     }
    ],
    "source": [
+    "from ipywidgets import Label\n",
+    "from IPython.display import HTML\n",
+    "\n",
     "l = Label()\n",
     "h = HTML()\n",
-    "l.value = '''$\\begin{align}$'''\n",
+    "l.value = '''hello'''\n",
     "display(l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dd86405f6e6474992312aa4acdfcd86",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>Label</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "Label(value='$$\\x08egin{tabular}\\n\\\\end{tabular}$$')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "l2 = Label()\n",
-    "l2.value = '''$$\\begin{tabular}\n",
-    "\\end{tabular}$$'''\n",
-    "display(l2)"
+    "l.value = 'world'"
    ]
   },
   {
@@ -1185,9 +1155,7 @@
     "    # Send data to the frontend\n",
     "    comm.send({'foo': 5})\n",
     "\n",
-    "get_ipython().kernel.comm_manager.register_target('my_comm_target', target_func)\n",
-    "\n",
-    "\n"
+    "get_ipython().kernel.comm_manager.register_target('my_comm_target', target_func)\n"
    ]
   },
   {
@@ -2433,6 +2401,81 @@
     "\n",
     "m"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipyleaflet import Map\n",
+    "\n",
+    "class M(Map):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "70627821177242d9997a43a16079b872",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>M</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "M(basemap={'url': 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', 'max_zoom': 19, 'attribution': 'Map data (c) <a href=\"https://openstreetmap.org\">OpenStreetMap</a> contributors'}, center=[34.6252978589571, -77.34580993652344], layers=(TileLayer(base=True, max_zoom=19, min_zoom=1, options=['attribution', 'detect_retina', 'max_zoom', 'min_zoom', 'tile_size']),), options=['attribution_control', 'basemap', 'bounce_at_zoom_limits', 'box_zoom', 'center', 'close_popup_on_click', 'double_click_zoom', 'dragging', 'inertia', 'inertia_deceleration', 'inertia_max_speed', 'keyboard', 'keyboard_pan_offset', 'keyboard_zoom_offset', 'max_zoom', 'min_zoom', 'scroll_wheel_zoom', 'tap', 'tap_tolerance', 'touch_zoom', 'world_copy_jump', 'zoom', 'zoom_animation_threshold', 'zoom_control', 'zoom_start'], zoom=10)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "m = M()\n",
+    "center = [34.6252978589571, -77.34580993652344]\n",
+    "zoom = 10\n",
+    "m.center = center\n",
+    "m.zoom = zoom\n",
+    "m._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from WeatherMap import WeatherMap\n",
+    "\n",
+    "m = WeatherMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
