--- a/Zach/Tagging/help_panel/setup/Untitled.ipynb
+++ b/Zach/Tagging/help_panel/setup/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,15 +21,13 @@
    ],
    "source": [
     "# Activate \n",
-    "!cd ../../\n",
-    "!jupyter nbextension install help_panel/ --user --symlink\n",
-    "!jupyter nbextension enable help_panel/help_panel --user\n",
-    "!cd help_panel/setup"
+    "!cd ../../ && jupyter nbextension install help_panel/ --user --symlink &&jupyter nbextension enable help_panel/help_panel --user\n",
+    "#!cd help_panel/setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,16 +35,14 @@
      "output_type": "stream",
      "text": [
       "Disabling notebook extension help_panel/help_panel...\n",
-      "      - Validating: \u001b[32mOK\u001b[0m\n",
-      "/home/zachary.selk/git/Callysto/Zach/Tagging/help_panel/setup\n",
-      "/bin/sh: 1: cd: can't cd to help_panel/setup\n"
+      "      - Validating: \u001b[32mOK\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "# Deactivate\n",
-    "!cd ../../jupyter nbextension disable help_panel/help_panel --user\n",
-    "!cd help_panel/setup"
+    "!cd ../../ && jupyter nbextension disable help_panel/help_panel --user\n",
+    "#!cd help_panel/setup"
    ]
   }
  ],
