added a folder structrue and a gitignore file

--- a/Nathan/permutation/Permutations.ipynb
+++ b/Nathan/permutation/Permutations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -95,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<script src=\"answers.js\"></script>\n",
+       "<script src=\"./scripts/answers.js\"></script>\n",
        "\n",
        "<style>\n",
        "    li {\n",
@@ -163,7 +163,7 @@
    ],
    "source": [
     "%%html\n",
-    "<script src=\"answers.js\"></script>\n",
+    "<script src=\"./scripts/answers.js\"></script>\n",
     "\n",
     "<style>\n",
     "    li {\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
       "text/html": [
        "\n",
        "<link rel=\"stylesheet\" href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\">\n",
-       "<link rel=\"stylesheet\" type=\"text/css\" href=\"experimental_circles.css\">\n",
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/experimental_circles.css\">\n",
        "\n",
        "\n",
        "<div id=\"experiment-full\">\n",
@@ -255,7 +255,7 @@
        "<div id=\"circles1-diff-permutations\"> \n",
        "    <p>How many different permutations can you make with the above circles?</p>\n",
        "</div>\n",
-       "<script src=\"circles.js\"></script>"
+       "<script src=\"./scripts/circles.js\"></script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -269,7 +269,7 @@
     "%%html\n",
     "\n",
     "<link rel=\"stylesheet\" href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\">\n",
-    "<link rel=\"stylesheet\" type=\"text/css\" href=\"experimental_circles.css\">\n",
+    "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/experimental_circles.css\">\n",
     "\n",
     "\n",
     "<div id=\"experiment-full\">\n",
@@ -291,7 +291,7 @@
     "<div id=\"circles1-diff-permutations\"> \n",
     "    <p>How many different permutations can you make with the above circles?</p>\n",
     "</div>\n",
-    "<script src=\"circles.js\"></script>"
+    "<script src=\"./scripts/circles.js\"></script>"
    ]
   },
   {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "\n",
        "    </table>\n",
        "</div>\n",
-       "<script src=\"circles_subset.js\"></script>"
+       "<script src=\"./scripts/circles_subset.js\"></script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -364,20 +364,20 @@
     "\n",
     "    </table>\n",
     "</div>\n",
-    "<script src=\"circles_subset.js\"></script>"
+    "<script src=\"./scripts/circles_subset.js\"></script>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<link rel=\"stylesheet\" type=\"text/css\" href=\"perm_table.css\">\n",
-       "<script src=\"table_nchooser.js\"></script>\n",
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/perm_table.css\">\n",
+       "<script src=\"./scripts/table_nchooser.js\"></script>\n",
        "\n",
        "<p>Fill out the table below:</p>\n",
        "<div id=\"table-container\">\n",
@@ -401,8 +401,8 @@
    "source": [
     "%%html\n",
     "\n",
-    "<link rel=\"stylesheet\" type=\"text/css\" href=\"perm_table.css\">\n",
-    "<script src=\"table_nchooser.js\"></script>\n",
+    "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/perm_table.css\">\n",
+    "<script src=\"./scripts/table_nchooser.js\"></script>\n",
     "\n",
     "<p>Fill out the table below:</p>\n",
     "<div id=\"table-container\">\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -464,8 +464,6 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "<script src=\"answers.js\"></script>\n",
        "\n",
        "<style>\n",
        "    \n",
@@ -550,8 +548,6 @@
    ],
    "source": [
     "%%html\n",
-    "\n",
-    "<script src=\"answers.js\"></script>\n",
     "\n",
     "<style>\n",
     "    \n",
