updated Permutation to work with new file structure

--- a/Nathan/permutation/Permutations.ipynb
+++ b/Nathan/permutation/Permutations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -95,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<script src=\"./scripts/answers.js\"></script>\n",
+       "<script src=\"./scripts/is_a_permutation.js\"></script>\n",
        "\n",
        "<style>\n",
        "    li {\n",
@@ -163,7 +163,7 @@
    ],
    "source": [
     "%%html\n",
-    "<script src=\"./scripts/answers.js\"></script>\n",
+    "<script src=\"./scripts/is_a_permutation.js\"></script>\n",
     "\n",
     "<style>\n",
     "    li {\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -301,12 +301,12 @@
     "In order to find out how many ways there are to permute a set, we need to think about how many different items we can place in a particular position. For instance, if we reset the above example we are looking at a set of five circles, { Red, Green, Blue, Gray, Yellow }. Now, if I took all the items out and I wanted to rearrage them, I could do something like { Green, Red, Gray, Blue, Yellow }. But we want to know how many different solutions there are to the problem. If I take out all the items of the set, and someone tells me to rearrange them, how many different options do I have for the first circle? I have five. I can put any of the circles in the first spot. I choose Green. Now, how many options do I have for the second circle? I already put Green in the first spot, so now I only have four options. I started with five, now four. If we look one step further, we will see I only have three options. There is a pattern! Namely, if I have n circles, where n = 5 in our case, then I have n choices for the first, n-1 choices for the second, n-2 choices for the third and so on. So I have n(n-1)(n-2)...(n-k) where k = n+1 or what is n!. This can be expressed as $_nP_r$ where $r$ is the number of \"slots\" and $n$ is the total number of circles we have to put in those slots.\n",
     "The formula for calculuating the number of different permutations is $\\frac{n!}{(n-r)!}$. Remembering the rules of factorial, if n = r as in n-r=0, then the denominator is one since 0! = 1. Therefore, if n=r, we only compute n!. Since we have this scenario above, if we have three circles, the number of different permutations we can create are $3! = 3*2*1 = 6$.\n",
     "\n",
-    "But what happens when we only have a subset of slots to put our circles into? What if r < n? Below is an example of when we have ordered set and how we can arrange a ordered subset. How many different ways can we express a subset? Use the $_nP_r$ formula to express how many ways we can arrange the set given a certain amount of circles(n) and slots(r) to put them in. "
+    "But what happens when we only have a subset of slots to put our circles into? What if r < n? Below is an example of when we have ordered set and how we can arrange a ordered subset. How many different ways can we express a subset?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -368,8 +368,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the $_nP_r$ formula ($\\frac{n!}{(n-r)!}$), fill out the table below for the amount of circles we have (*n*) and the number of slots we have to put them in (*r*)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +386,6 @@
        "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/perm_table.css\">\n",
        "<script src=\"./scripts/table_nchooser.js\"></script>\n",
        "\n",
-       "<p>Fill out the table below:</p>\n",
        "<div id=\"table-container\">\n",
        "<table id=\"permutation-table\">\n",
        "</table>\n",
@@ -404,7 +410,6 @@
     "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/perm_table.css\">\n",
     "<script src=\"./scripts/table_nchooser.js\"></script>\n",
     "\n",
-    "<p>Fill out the table below:</p>\n",
     "<div id=\"table-container\">\n",
     "<table id=\"permutation-table\">\n",
     "</table>\n",
@@ -433,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -465,75 +470,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<style>\n",
-       "    \n",
-       "    #restriction-questions-container {\n",
-       "        margin-top: 20px;\n",
-       "    }\n",
-       "    \n",
-       "    #restriction-questions-container input {\n",
-       "        margin: 10px;\n",
-       "    }\n",
-       "    \n",
-       "    #exercise2-button-container {\n",
-       "        width: 50%;\n",
-       "        margin-top: 10px;\n",
-       "    }\n",
-       "    \n",
-       "    #submit-restrictions {\n",
-       "        float: left;\n",
-       "    }\n",
-       "    \n",
-       "    #restriction-solutions-container {\n",
-       "        margin-top: 20px;\n",
-       "    }\n",
-       "    \n",
-       "    #restriction-solutions-button {\n",
-       "        float: right;\n",
-       "    }\n",
-       "    \n",
-       "    .exercise2-answer-fb-container {\n",
-       "        width: 50%;\n",
-       "    }\n",
-       "    \n",
-       "    .restriction-answers {\n",
-       "        margin-left: 10px;\n",
-       "        float: left;\n",
-       "    }\n",
-       "    \n",
-       "    .restriction-feedback {\n",
-       "        float: right;\n",
-       "        text-align: center;\n",
-       "        width: 25%\n",
-       "    }\n",
-       "</style>\n",
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/restrictions.css\">\n",
+       "<script src=\"./scripts/restrictions.js\"></script>\n",
        "\n",
-       "<h2>Exercises</h2>\n",
        "<div id=\"restriction-questions-container\">\n",
-       "    <p>1. How many different ways are there to rearrange the word APPLE in which no two P's are together?</p>\n",
-       "    <div class=\"exercise2-answer-fb-container\">\n",
-       "        <input class=\"restriction-answers\" type=\"text\">\n",
-       "        <p class=\"restriction-feedback hidden\"></p>\n",
-       "    </div>\n",
-       "    <div class=\"clear-float\"></div>\n",
-       "    <p>2. If a car dealership has 3 Aston Martin's and 5 Porches, how many different way can they be arranged so that they align all the Aston Martin's together and all the Porches together?</p>\n",
-       "    <div class=\"exercise2-answer-fb-container\">\n",
-       "        <input class=\"restriction-answers\" type=\"text\">\n",
-       "        <p class=\"restriction-feedback hidden\"></p>\n",
-       "    </div>\n",
-       "    <div class=\"clear-float\"></div>\n",
-       "    <p>3. If Carl has 3 JRR Tolkien books, 5 George R Martin books, and 7 JK Rowling books, how many different ways are there to rearrage the books such that all JK Rowling are together and all JRR Tolkien books are never put adjacent to each other? (All books are unique) </p>\n",
-       "    <div class=\"exercise2-answer-fb-container\">\n",
-       "        <input class=\"restriction-answers\" type=\"text\">\n",
-       "        <p class=\"restriction-feedback hidden\"></p><br>\n",
-       "    </div>\n",
-       "    <div class=\"clear-float\"></div>\n",
-       "</div>    \n",
-       "<div id=\"exercise2-button-container\">\n",
-       "    <input id=\"submit-restrictions\" type=\"button\" value=\"Submit answers\" onclick=\"submitRestrictions()\">\n",
-       "    <input id=\"restriction-solutions-button\" class=\"hidden\" type=\"button\" value=\"Show solutions\" onclick=\"showRestrictionSolutions()\">\n",
+       "    <h2>Exercises</h2>\n",
        "</div>\n",
-       "<div class=\"clear-float\"></div>\n",
        "<div id=\"restriction-solutions-container\" class=\"hidden\">\n",
        "    <h2>Solutions</h2>\n",
        "</div>"
@@ -549,75 +491,12 @@
    "source": [
     "%%html\n",
     "\n",
-    "<style>\n",
-    "    \n",
-    "    #restriction-questions-container {\n",
-    "        margin-top: 20px;\n",
-    "    }\n",
-    "    \n",
-    "    #restriction-questions-container input {\n",
-    "        margin: 10px;\n",
-    "    }\n",
-    "    \n",
-    "    #exercise2-button-container {\n",
-    "        width: 50%;\n",
-    "        margin-top: 10px;\n",
-    "    }\n",
-    "    \n",
-    "    #submit-restrictions {\n",
-    "        float: left;\n",
-    "    }\n",
-    "    \n",
-    "    #restriction-solutions-container {\n",
-    "        margin-top: 20px;\n",
-    "    }\n",
-    "    \n",
-    "    #restriction-solutions-button {\n",
-    "        float: right;\n",
-    "    }\n",
-    "    \n",
-    "    .exercise2-answer-fb-container {\n",
-    "        width: 50%;\n",
-    "    }\n",
-    "    \n",
-    "    .restriction-answers {\n",
-    "        margin-left: 10px;\n",
-    "        float: left;\n",
-    "    }\n",
-    "    \n",
-    "    .restriction-feedback {\n",
-    "        float: right;\n",
-    "        text-align: center;\n",
-    "        width: 25%\n",
-    "    }\n",
-    "</style>\n",
+    "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/restrictions.css\">\n",
+    "<script src=\"./scripts/restrictions.js\"></script>\n",
     "\n",
-    "<h2>Exercises</h2>\n",
     "<div id=\"restriction-questions-container\">\n",
-    "    <p>1. How many different ways are there to rearrange the word APPLE in which no two P's are together?</p>\n",
-    "    <div class=\"exercise2-answer-fb-container\">\n",
-    "        <input class=\"restriction-answers\" type=\"text\">\n",
-    "        <p class=\"restriction-feedback hidden\"></p>\n",
-    "    </div>\n",
-    "    <div class=\"clear-float\"></div>\n",
-    "    <p>2. If a car dealership has 3 Aston Martin's and 5 Porches, how many different way can they be arranged so that they align all the Aston Martin's together and all the Porches together?</p>\n",
-    "    <div class=\"exercise2-answer-fb-container\">\n",
-    "        <input class=\"restriction-answers\" type=\"text\">\n",
-    "        <p class=\"restriction-feedback hidden\"></p>\n",
-    "    </div>\n",
-    "    <div class=\"clear-float\"></div>\n",
-    "    <p>3. If Carl has 3 JRR Tolkien books, 5 George R Martin books, and 7 JK Rowling books, how many different ways are there to rearrage the books such that all JK Rowling are together and all JRR Tolkien books are never put adjacent to each other? (All books are unique) </p>\n",
-    "    <div class=\"exercise2-answer-fb-container\">\n",
-    "        <input class=\"restriction-answers\" type=\"text\">\n",
-    "        <p class=\"restriction-feedback hidden\"></p><br>\n",
-    "    </div>\n",
-    "    <div class=\"clear-float\"></div>\n",
-    "</div>    \n",
-    "<div id=\"exercise2-button-container\">\n",
-    "    <input id=\"submit-restrictions\" type=\"button\" value=\"Submit answers\" onclick=\"submitRestrictions()\">\n",
-    "    <input id=\"restriction-solutions-button\" class=\"hidden\" type=\"button\" value=\"Show solutions\" onclick=\"showRestrictionSolutions()\">\n",
+    "    <h2>Exercises</h2>\n",
     "</div>\n",
-    "<div class=\"clear-float\"></div>\n",
     "<div id=\"restriction-solutions-container\" class=\"hidden\">\n",
     "    <h2>Solutions</h2>\n",
     "</div>\n"
