--- a/Nicole/Order_of_Operations.ipynb
+++ b/Nicole/Order_of_Operations.ipynb
@@ -2,69 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
+       "\n",
        "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       "  if (code_show) {\n",
-       "    $('div.input').each(function(id) {\n",
-       "      el = $(this).find('.cm-variable:first');\n",
-       "      if (id == 0 || el.text() == 'hide_me') {\n",
-       "        $(this).hide();\n",
-       "      }\n",
-       "    });\n",
-       "    $('div.output_prompt').css('opacity', 0);\n",
-       "  } else {\n",
-       "    $('div.input').each(function(id) {\n",
-       "      $(this).show();\n",
-       "    });\n",
-       "    $('div.output_prompt').css('opacity', 1);\n",
+       "  function code_toggle() {\n",
+       "    if (code_shown){\n",
+       "      $('div.input').hide('500');\n",
+       "      $('#toggleButton').val('Show Code')\n",
+       "    } else {\n",
+       "      $('div.input').show('500');\n",
+       "      $('#toggleButton').val('Hide Code')\n",
+       "    }\n",
+       "    code_shown = !code_shown\n",
        "  }\n",
-       "  code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
+       "\n",
+       "  $( document ).ready(function(){\n",
+       "    code_shown=false;\n",
+       "    $('div.input').hide()\n",
+       "  });\n",
        "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "from IPython.display import HTML\n",
-    "hide_me = ''\n",
-    "HTML('''<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    "  if (code_show) {\n",
-    "    $('div.input').each(function(id) {\n",
-    "      el = $(this).find('.cm-variable:first');\n",
-    "      if (id == 0 || el.text() == 'hide_me') {\n",
-    "        $(this).hide();\n",
-    "      }\n",
-    "    });\n",
-    "    $('div.output_prompt').css('opacity', 0);\n",
-    "  } else {\n",
-    "    $('div.input').each(function(id) {\n",
-    "      $(this).show();\n",
-    "    });\n",
-    "    $('div.output_prompt').css('opacity', 1);\n",
+    "%%html\n",
+    "\n",
+    "<script>\n",
+    "  function code_toggle() {\n",
+    "    if (code_shown){\n",
+    "      $('div.input').hide('500');\n",
+    "      $('#toggleButton').val('Show Code')\n",
+    "    } else {\n",
+    "      $('div.input').show('500');\n",
+    "      $('#toggleButton').val('Hide Code')\n",
+    "    }\n",
+    "    code_shown = !code_shown\n",
     "  }\n",
-    "  code_show = !code_show\n",
-    "} \n",
-    "$( document ).ready(code_toggle);\n",
+    "\n",
+    "  $( document ).ready(function(){\n",
+    "    code_shown=false;\n",
+    "    $('div.input').hide()\n",
+    "  });\n",
     "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
    ]
   },
   {
@@ -94,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +95,7 @@
        "10"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +115,7 @@
        "27"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +144,7 @@
        "3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +164,7 @@
        "9.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +200,7 @@
        "21"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +233,7 @@
        "40"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +253,7 @@
        "31"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +284,7 @@
        "(2, 12)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +304,7 @@
        "(1.0, 4.0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +420,7 @@
        "48"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +447,7 @@
        "33"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +474,7 @@
        "33"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +547,7 @@
        "96"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,10 +564,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Y3CZ_JBQ0do?rel=0\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Want to see another example? Watch this [![Order of Operations Video](http://img.youtube.com/vi/Y3CZ_JBQ0do/0.jpg)](http://www.youtube.com/watch?v=Y3CZ_JBQ0do) and try to solve it before they get to the solution!"
+    "from IPython.display import HTML\n",
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Y3CZ_JBQ0do?rel=0\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -726,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -741,7 +750,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47a9e9e8e692478492ec9e7df8676fd8",
+       "model_id": "f917231ce811471fbe67b95e7b72ee8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -761,23 +770,14 @@
        "</p>\n"
       ],
       "text/plain": [
-       "FloatText(value=20.5, description='Your Answer')"
+       "FloatText(value=0.0, description='Your Answer')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are correct!\n"
-     ]
     }
    ],
    "source": [
-    "hide_me\n",
-    "\n",
     "import ipywidgets as widgets\n",
     "import IPython\n",
     "\n",
@@ -846,13 +846,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b7573ebf68844fc95480fd78078938b",
+       "model_id": "15a0c8f73a4a4fd7977d17f2e751f4c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -872,7 +872,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "Dropdown(description='Difficulty:', options=('Medium', 'Hard', 'Easy'), value='Medium')"
+       "Dropdown(description='Difficulty:', options=('Easy', 'Medium', 'Hard'), value='Easy')"
       ]
      },
      "metadata": {},
@@ -881,7 +881,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02a7e7fe036c41e8a34263fbbe34c6a5",
+       "model_id": "128a73a4949248768ec8f7e9a14ebeb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -906,50 +906,9 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0194cca7d0d748a78613ce5ec18d43f0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>Button</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "Button(description='Answer', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1+6)*5+3\n",
-      "(7)*5+3\n",
-      "35+3\n",
-      "38\n"
-     ]
     }
    ],
    "source": [
-    "hide_me\n",
-    "\n",
     "import ipywidgets as widgets\n",
     "import IPython\n",
     "\n",
